fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -250,10 +250,14 @@ footer p {
 footer h1 {
     margin: 0;
 }
+.footer-description {
+  text-align: center;
+}
 footer ul {
     display: flex;
     gap: 48px;
     list-style: none;
+    padding-left: 0;
 }
 footer ul a {
     text-decoration: none;
